--- a/css/style.less
+++ b/css/style.less
@@ -19,6 +19,10 @@ input:-webkit-autofill {
 	-webkit-box-shadow: 0 0 0px 1000px white inset !important;
 }
 
+template {
+	display: none;
+}
+
 h1,h2,h3,h4,h5,h6 {
 	font-weight: 400;
 	word-break: break-all;
@@ -694,7 +698,7 @@ body {
 		.content-header {
 			min-height: auto;
 			margin-left: 0;
-			padding: 65px 16px 20px;
+			padding: 65px 0px 20px;
 		}
 		.article-header{
 			.title{
@@ -783,6 +787,9 @@ body {
 		.subtitle{
 			display: none;
 		}
+	}
+	.content-header .warp{
+		padding: 0 20px;
 	}
 }
 
@@ -909,7 +916,7 @@ body {
 	left: 50%;
 	z-index: 99;
 	transform: translate(-50%, -50%);
-	width:320px;
+	width:440px;
 	text-align: center;
 	background: #fff;
 	border-radius: 4px;
@@ -951,6 +958,15 @@ body {
 		}
 	}
 
+}
+
+@media screen and (max-width: 640px) {
+	#rewardModel{
+		width: 320px;
+	}
+	#rewardModel .reward-title {
+		font-size: 14px;
+	}
 }
 
 /*标签*/
@@ -1077,10 +1093,222 @@ body {
 	}
 }
 
+
+
+/* tab 标签 */
+.tabs-bar{
+	position: relative;
+	overflow: hidden;
+	&.in{
+		overflow: visible;
+		text-shadow: none;
+		.tags-list{
+			margin-right: 0px;
+			position: absolute;
+			top: 20px;
+			z-index: 9;
+			background: #fff;
+			box-shadow: 0 0 14px 1px rgba(0,0,0,.3);
+			flex-wrap: wrap;
+			.tags-list-item{
+				padding: 10px 20px;
+				color: #555;
+			}
+		}
+		.tags-list-more{
+			top: -5px;
+		}
+	}
+	.tags-list{
+		position: relative;
+		padding: 0;
+		white-space: nowrap;
+		margin-right: 40px;
+		display: flex;
+		flex-direction: row;
+		flex-wrap: nowrap;
+		white-space: nowrap;
+		overflow: hidden;
+		.tags-list-item{
+			padding: 10px 20px;
+			flex: none;
+			color: #fff;
+		}
+	}
+	.tags-list-more{
+		position: absolute;
+		top: 11px;
+		right: 0;
+		z-index: 9;
+		a{
+			display: inline-block;
+			padding: 0 15px;
+			.iconfont{
+				font-size: 18px;
+				color: #fff;
+			}
+		}
+	}
+}
+
 @media screen and (max-width: 640px) {
 	#gotop {
 		width: 40px;
 		height: 40px;
 		line-height: 40px;
 	}
+	.tabs-bar{
+		.tags-list{
+			overflow-x: auto;
+			.tags-list-item{
+
+			}
+		}
+		.tags-list-more{
+			// margin-right: -5px;
+			// padding: 0 15px;
+			.iconfont{
+				font-size: 18px;
+				color: #fff;
+			}
+		}
+	}
 }
+
+// .tabs-bar {
+//     position: relative;
+//     padding: 0;
+//     margin-top: 14px;
+//     overflow: hidden;
+//     background: #3F51B5
+// }
+
+// .tabs-bar.expand {
+//     overflow: visible;
+//     text-shadow: none
+// }
+
+// .tabs-bar.expand .tags-list {
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+//     display: block;
+//     padding: 16px;
+//     white-space: normal;
+//     background: #fff;
+//     border-radius: 4px;
+//     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12)
+// }
+
+// .tabs-bar.expand .tags-list .tags-list-item {
+//     padding: 6px 1em;
+//     margin-bottom: 6px;
+//     color: #727272
+// }
+
+// .tabs-bar.expand .tags-list .tags-list-item:hover {
+//     opacity: .7;
+//     text-decoration: underline
+// }
+
+// .tabs-bar.expand .tags-list .tags-list-item:after {
+//     display: none
+// }
+
+// .tabs-bar.expand .tags-list .tags-list-item.active {
+//     color: #fff;
+//     background: #FF4081;
+//     border-radius: .2em
+// }
+
+// .tags-list {
+//     position: relative;
+//     z-index: 1;
+//     width: 100%;
+//     overflow-x: hidden;
+//     overflow-y: hidden;
+//     margin: 0 auto;
+//     list-style: none;
+//     padding: 0;
+//     white-space: nowrap;
+//     -webkit-transition: .2s ease-in-out;
+//     transition: .2s ease-in-out;
+//     display: -webkit-box;
+//     display: -webkit-flex;
+//     display: -ms-flexbox;
+//     display: flex
+// }
+
+// .tags-list-item {
+//     position: relative;
+//     -webkit-box-flex: none;
+//     -webkit-flex: none;
+//     -ms-flex: none;
+//     flex: none;
+//     padding: 12px 1em;
+//     line-height: 20px;
+//     color: rgba(255, 255, 255, .8);
+//     border-radius: .2em .2em 0 0
+// }
+
+// .tags-list-item:after {
+//     content: '';
+//     position: absolute;
+//     bottom: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 3px
+// }
+
+// .tags-list-item.active {
+//     color: #fff
+// }
+
+// .tags-list-item.active:after {
+//     background: #FF4081
+// }
+
+// .tags-list-item:hover,.tags-list-item:active {
+//     color: #fff;
+//     text-decoration: none
+// }
+
+// .tags-list-more {
+//     position: absolute;
+//     right: 0;
+//     bottom: 0;
+//     z-index: 2;
+//     height: 44px;
+//     padding-left: 1em;
+//     background: #3F51B5 !important
+// }
+
+// .tags-list-more .action {
+//     width: 44px;
+//     height: 44px;
+//     line-height: 20px;
+//     border-radius: 50%;
+//     -webkit-transition: .2s ease-in-out;
+//     transition: .2s ease-in-out
+// }
+
+// @media screen and (max-width: 760px) {
+//     .tabs-bar {
+//         margin-left:-16px;
+//         margin-right: -16px;
+//         padding: 0 0 0 16px;
+//         width: auto
+//     }
+
+//     .tags-list {
+//         overflow-x: auto
+//     }
+
+//     .tags-list::-webkit-scrollbar {
+//         display: none
+//     }
+
+//     .tags-list-more {
+//         display: none
+//     }
+// }
