--- a/css/style.less
+++ b/css/style.less
@@ -814,7 +814,6 @@ body {
 			color: #3F51B5;
 			background: #eaecf7;
 			box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
-			-webkit-transition: .4s ease-in-out;
 			transition: .4s ease-in-out;
 			.iconfont{
 				font-size: 28px;
@@ -846,6 +845,7 @@ body {
 					transition: 0.3s ease-in-out;
 					transform-origin: center center;
 					transform: scale(0);
+					background: #fff;
 					&.qq{
 						color:#3D95D5;
 					}
@@ -971,7 +971,116 @@ body {
 	}
 }
 
-/*标签*/
+
+/* 导航tab 标签 */
+.tabs-bar{
+	position: relative;
+	z-index: 3;
+	overflow: hidden;
+	&.fixed{
+		position: fixed;
+		top: 55px;
+		background:#3F51B5;
+	}
+	&.warp{
+		padding: 0;
+	}
+	&.ready{
+		overflow: visible;
+		transform: scale(0);
+		transition: .2s ease-in-out;
+		&.in{
+			padding-top: 40px;
+			text-shadow: none;
+			transform: scale(1);
+			.tags-list{
+				padding: 20px;
+				margin-right: 0px;
+				position: absolute;
+				top: 40px;
+				z-index: 3;
+				background: #fff;
+				box-shadow: 0 0 14px 1px rgba(0,0,0,.3);
+				flex-wrap: wrap;
+				.tags-list-item{
+					margin: 2px 3px;
+					padding: 5px 15px;
+					color: #555;
+					&.active, &:hover{
+						color: #fff;
+						background:  #FF4081;
+					}
+				}
+			}
+		}
+	}
+	.tags-list{
+		position: relative;
+		padding: 0;
+		white-space: nowrap;
+		margin-right: 40px;
+		display: flex;
+		flex-direction: row;
+		flex-wrap: nowrap;
+		white-space: nowrap;
+		overflow: hidden;
+		transition: 0.3s ease-in-out;
+		.tags-list-item{
+			position: relative;
+			padding: 10px 20px;
+			text-align: center;
+			color: rgba(255,255,255,.8);
+			transition:  .2s;
+			overflow: visible!important;
+			&:hover{
+				color: #fff;
+			}
+			&.active {
+				color: #fff;
+				border-bottom: 2px solid #FF4081;
+			}
+		}
+	}
+	.tags-list-more{
+		position: absolute;
+		top: 0;
+		right: 0;
+		z-index: 9;
+		a{
+			display: inline-block;
+			.iconfont{
+				font-size: 18px;
+				color: #fff;
+			}
+		}
+	}
+}
+
+
+
+@media screen and (max-width: 640px) {
+	#gotop {
+		width: 40px;
+		height: 40px;
+		line-height: 40px;
+	}
+	.tabs-bar{
+		.tags-list{
+			overflow-x: auto;
+			.tags-list-item{
+
+			}
+		}
+		.tags-list-more{
+			.iconfont{
+				font-size: 18px;
+				color: #fff;
+			}
+		}
+	}
+}
+
+/*文章标签*/
 .article-tag-list{
 	margin-top: 10px;
 	margin-bottom: 5px;
@@ -1075,7 +1184,7 @@ body {
 	position: fixed;
 	right: 16px;
 	bottom: 30px;
-	z-index: 1;
+	z-index: 10;
 	cursor: pointer;
 	width: 56px;
 	height: 56px;
@@ -1097,245 +1206,5 @@ body {
 
 
 
-/* tab 标签 */
-.tabs-bar{
-	position: relative;
-	z-index: 3;
-	overflow: hidden;
-	transition: .3s ease-in-out;
-	&.warp{
-		padding: 0;
-	}
-	&.ready{
-		overflow: visible;
-		transform: scale(0);
-		transition: .2s ease-in-out;
-		&.in{
-			padding-top: 40px;
-			text-shadow: none;
-			transform: scale(1);
-			.tags-list{
-				padding: 20px;
-				margin-right: 0px;
-				position: absolute;
-				top: 40px;
-				z-index: 3;
-				background: #fff;
-				box-shadow: 0 0 14px 1px rgba(0,0,0,.3);
-				flex-wrap: wrap;
-				.tags-list-item{
-					margin: 2px 3px;
-					padding: 5px 15px;
-					color: #555;
-					&.active, &:hover{
-						color: #fff;
-						background:  #FF4081;
-					}
-				}
-			}
-		}
-	}
-	.tags-list{
-		position: relative;
-		padding: 0;
-		white-space: nowrap;
-		margin-right: 40px;
-		display: flex;
-		flex-direction: row;
-		flex-wrap: nowrap;
-		white-space: nowrap;
-		overflow: hidden;
-		transition: 0.3s ease-in-out;
-		.tags-list-item{
-			position: relative;
-			padding: 10px 20px;
-			flex: 1;
-			text-align: center;
-			color: rgba(255,255,255,.8);
-			transition:  .2s;
-			overflow: visible!important;
-			&:hover{
-				color: #fff;
-			}
-			&.active {
-				color: #fff;
-				border-bottom: 2px solid #FF4081;
-			}
-		}
-	}
-	.tags-list-more{
-		position: absolute;
-		top: 0;
-		right: 0;
-		z-index: 9;
-		a{
-			display: inline-block;
-			.iconfont{
-				font-size: 18px;
-				color: #fff;
-			}
-		}
-	}
-}
-
-@media screen and (max-width: 640px) {
-	#gotop {
-		width: 40px;
-		height: 40px;
-		line-height: 40px;
-	}
-	.tabs-bar{
-		.tags-list{
-			overflow-x: auto;
-			.tags-list-item{
-
-			}
-		}
-		.tags-list-more{
-			.iconfont{
-				font-size: 18px;
-				color: #fff;
-			}
-		}
-	}
-}
-
-// .tabs-bar {
-//     position: relative;
-//     padding: 0;
-//     margin-top: 14px;
-//     overflow: hidden;
-//     background: #3F51B5
-// }
-
-// .tabs-bar.expand {
-//     overflow: visible;
-//     text-shadow: none
-// }
-
-// .tabs-bar.expand .tags-list {
-//     position: absolute;
-//     top: 0;
-//     left: 0;
-//     display: block;
-//     padding: 16px;
-//     white-space: normal;
-//     background: #fff;
-//     border-radius: 4px;
-//     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12)
-// }
-
-// .tabs-bar.expand .tags-list .tags-list-item {
-//     padding: 6px 1em;
-//     margin-bottom: 6px;
-//     color: #727272
-// }
-
-// .tabs-bar.expand .tags-list .tags-list-item:hover {
-//     opacity: .7;
-//     text-decoration: underline
-// }
-
-// .tabs-bar.expand .tags-list .tags-list-item:after {
-//     display: none
-// }
-
-// .tabs-bar.expand .tags-list .tags-list-item.active {
-//     color: #fff;
-//     background: #FF4081;
-//     border-radius: .2em
-// }
-
-// .tags-list {
-//     position: relative;
-//     z-index: 1;
-//     width: 100%;
-//     overflow-x: hidden;
-//     overflow-y: hidden;
-//     margin: 0 auto;
-//     list-style: none;
-//     padding: 0;
-//     white-space: nowrap;
-//     -webkit-transition: .2s ease-in-out;
-//     transition: .2s ease-in-out;
-//     display: -webkit-box;
-//     display: -webkit-flex;
-//     display: -ms-flexbox;
-//     display: flex
-// }
-
-// .tags-list-item {
-//     position: relative;
-//     -webkit-box-flex: none;
-//     -webkit-flex: none;
-//     -ms-flex: none;
-//     flex: none;
-//     padding: 12px 1em;
-//     line-height: 20px;
-//     color: rgba(255, 255, 255, .8);
-//     border-radius: .2em .2em 0 0
-// }
-
-// .tags-list-item:after {
-//     content: '';
-//     position: absolute;
-//     bottom: 0;
-//     left: 0;
-//     width: 100%;
-//     height: 3px
-// }
-
-// .tags-list-item.active {
-//     color: #fff
-// }
-
-// .tags-list-item.active:after {
-//     background: #FF4081
-// }
-
-// .tags-list-item:hover,.tags-list-item:active {
-//     color: #fff;
-//     text-decoration: none
-// }
-
-// .tags-list-more {
-//     position: absolute;
-//     right: 0;
-//     bottom: 0;
-//     z-index: 2;
-//     height: 44px;
-//     padding-left: 1em;
-//     background: #3F51B5 !important
-// }
-
-// .tags-list-more .action {
-//     width: 44px;
-//     height: 44px;
-//     line-height: 20px;
-//     border-radius: 50%;
-//     -webkit-transition: .2s ease-in-out;
-//     transition: .2s ease-in-out
-// }
-
-// @media screen and (max-width: 760px) {
-//     .tabs-bar {
-//         margin-left:-16px;
-//         margin-right: -16px;
-//         padding: 0 0 0 16px;
-//         width: auto
-//     }
-
-//     .tags-list {
-//         overflow-x: auto
-//     }
-
-//     .tags-list::-webkit-scrollbar {
-//         display: none
-//     }
-
-//     .tags-list-more {
-//         display: none
-//     }
-// }
 
 
